Fixed nametag missalignment on smaller screen sizes

--- a/style.css
+++ b/style.css
@@ -77,6 +77,7 @@ body {
     display: flex;
     align-items: center;
     flex-direction: column;
+    position: relative;
 }
 
 .creditimage { /* webmaster pictures */
@@ -87,14 +88,17 @@ body {
 
 .creditname { /* bar in front of webmaster pictures */
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
+    justify-content: center;
     align-items: center;
-    position: absolute;
-    background-color: #01274b;
-    width: 10%;
+    position:absolute;
+    background-color: #001529;
+    width: 80%;
+    min-height: 12%;
     border-radius: 16px;
-    padding: 0.5%;
-    margin-top: 13%
+    padding: 1%;
+    margin: 0;
+    bottom: 4%;
 }
 
 .creditname:hover { /* change bar color when hovering */
